- Added comments to clarify some methods
- added a method in InvisibleBlocksBoard that calculates the number of seconds left until the next block appears

- Added a new method (showCountdown) in NotificationPanel (for challenge mode) that displays a Countdown for the blocks reappearing

- added corresponding logic for showCountdown in GameControllerChallenge & InvisibleBlocksBoard

- Added a new method in GuiController to either show countdown notification or score notification